# ai-dev-projects

./: .pre-commit-config.yaml  PROJECT_SUMMARY.md  README.md  docker-compose.dev.yml  docker-compose.yml  env.production.template  index.html
Module 2/: .dockerignore  .gitignore  .pre-commit-config.yaml  BUG_FIXES_APPLIED.md  COMBINED_CONTAINER_SETUP.md  COMPLETION_REPORT.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_RENDER.md  DOCKER_QUICK_REF.md  DOCKER_README.md  DOCKER_SETUP_COMPLETE.md  DOCKER_SETUP_SUMMARY.md  Dockerfile.production  Makefile  PROJECT_SUMMARY.md  docker-compose.dev.yml  docker-compose.yml  env.production.template  render.yaml
Module 2/backend/: .dockerignore  .gitignore  API_DOCUMENTATION.md  DEPLOYMENT.md  Dockerfile  MIGRATION_GUIDE.md  README.md
Module 2/frontend/: .dockerignore  Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
Module 4/: .gitignore  README.md  agent.py  prompts.py  requirnments.txt  tools.py
backend/: .env.example  .gitignore  DEPLOYMENT.md  MIGRATION_GUIDE.md  README.md  alembic.ini
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  package-lock.json  package.json  tailwind.config.ts
homework_02/: .dockerignore  .gitignore  render.yaml
homework_02/backend/: .dockerignore  API_DOCUMENTATION.md  Dockerfile  main.py  pyproject.toml
homework_02/frontend/: README.md  index.html  nginx.conf  vite.config.ts
src/: index.css
src/components/: GameBoard.tsx  GameOverScreen.tsx  Leaderboard.tsx  LoginScreen.tsx  MainMenu.tsx
src/context/: GameContext.tsx
(+32 files in other folders)
